Updated images and code for game dev

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
                         <img class="hover" src="images/actor2HOVER.png" alt="Actor box on hover">
                     </a>
                 </div>
+
+                <div class="box bx8" id="game">
+                    <a href="#" target="_blank">
+                        <img class="normal" src="images/game2.png" alt="Actor box">
+                        <img class="hover" src="images/game2HOVER.png" alt="Actor box on hover">
+                    </a>
+                </div>
   
                 
                 </div>
