--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
 
                 <div class="box bx8" id="game">
-                    <a href="#" target="_blank">
+                    <a href="https://cellohh.github.io/game-dev/" target="_blank">
                         <img class="normal" src="images/game2.png" alt="Actor box">
                         <img class="hover" src="images/game2HOVER.png" alt="Actor box on hover">
                     </a>
