fixed mobile finally?

--- a/index2.html
+++ b/index2.html
@@ -139,11 +139,11 @@
         </div>
      
 
-        <div class="full-body-container" style="margin-top: 255px;">
+        <div class="full-body-container">
           <img class="img-fluid" src="images/Cello%20Full%20Body.png" alt="Picture of Cello">
           </div>
 
-        <img class="img-fluid" img id="jack" src="images/jack.png" style="margin-left: 100px;" alt="Jack of all trades text">
+        <img class="img-fluid" img id="jack" src="images/jack.png" alt="Jack of all trades text">
 
       </div>
     </div>
