--- a/index.html
+++ b/index.html
@@ -1,171 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <!-- Google tag (gtag.js) -->
- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LMF8J334GV"></script>
- <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
- 
-   gtag('config', 'G-LMF8J334GV');
- </script>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LMF8J334GV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="padding: 1px 18px;">
-    <a class="navbar-brand" href="http://www.marceltorres.com"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#intro">Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#work">Work</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      gtag('config', 'G-LMF8J334GV');
+    </script>
 
-  <!-- Intro Section -->
-  <section id="intro" style="background-image: url('images/MARCELacg2023three.png'); background-size: cover; background-position: center;">
-    <div class="container">
-      <h1 class="display-4" id="me">I'm <br><div id="mt">Marcel 'Cello' Torres</div>Welcome to everything I do</h1>
-    </div>
-  </section>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  </head>
 
-<!-- Work Section -->
-<section id="work" style="background-image: url('images/bg2.png'); background-size: cover; background-position: center; height: auto;">
+  <body>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="padding: 1px 18px;">
+      <a class="navbar-brand" href="http://www.marceltorres.com"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#intro">Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Intro Section -->
+    <section id="intro"
+      style="background-image: url('images/MARCELacg2023three.png'); background-size: cover; background-position: center;">
+      <div class="container">
+        <h1 class="display-4" id="me">I'm <br>
+          <div id="mt">Marcel 'Cello' Torres</div>Welcome to everything I do
+        </h1>
+      </div>
+    </section>
+
+    <!-- Work Section -->
+    <section id="work"
+      style="background-image: url('images/bg2.png'); background-size: cover; background-position: center; height: auto;">
+      <div class="container">
+        <div class="row">
+          <!-- Repeat this div for each work link -->
+          <div class="col-md-4">
+            <div class="box bx2" id="youtuber">
+              <a href="https://www.youtube.com/@AttackCancel" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-right" data-aos-duration="2000">
+                <img class="normal" src="images/youtuber2.png" class="img-fluid" alt="Youtuber box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="video-editor">
+              <a href="https://cellohh.github.io/videoEDITOR/" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-down" data-aos-duration="2000">
+                <img class="normal" src="images/video2.png" class="img-fluid" alt="Video Editor box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="web-developer">
+              <a href="https://cellohh.github.io/developer/" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-left" data-aos-duration="2000">
+                <img class="normal" src="images/web2.png" class="img-fluid" alt="Web Developer box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="graphic-designer">
+              <a href="https://cello.portfoliobox.net" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-right" data-aos-duration="2000">
+                <img class="normal" src="images/graphic2.png" class="img-fluid" alt="Graphic Designer box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="esports">
+              <a href="http://www.attackcancel.com" class="work-link aos-init" target="_blank" data-aos="zoom-out-down"
+                data-aos-duration="2000">
+                <img class="normal" src="images/esports2.png" class="img-fluid" alt="eSports box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="live-streamer">
+              <a href="https://www.twitch.tv/cellohh" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-left" data-aos-duration="2000">
+                <img class="normal" src="images/streamer2.png" class="img-fluid" alt="Live Streamer box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="actor">
+              <a href="https://cellohhh.tumblr.com/" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-right" data-aos-duration="2000">
+                <img class="normal" src="images/actor2.png" class="img-fluid" alt="Actor box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="game">
+              <a href="https://cellohh.github.io/game-dev/" class="work-link aos-init" target="_blank"
+                data-aos="zoom-out-down" data-aos-duration="2000">
+                <img class="normal" src="images/game2.png" class="img-fluid" alt="Game Developer box">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="box bx2" id="author">
+              <a href="#" class="work-link aos-init" target="_blank" data-aos="zoom-out-left" data-aos-duration="2000">
+                <img class="normal" src="images/author2.png" class="img-fluid" alt="Author box">
+              </a>
+            </div>
+          </div>
+          <!-- Repeat for each work link -->
+        </div>
+      </div>
+    </section>
+
+
+    <!-- Contact Section -->
+<section id="contact"
+  style="background-image: url('images/bgcontact.png'); background-size: cover; background-position: center;">
   <div class="container">
     <div class="row">
-      <!-- Repeat this div for each work link -->
-      <div class="col-md-4">
-        <div class="box bx2" id="youtuber">
-          <a href="https://www.youtube.com/@AttackCancel" class="work-link aos-init" target="_blank"  data-aos="zoom-out-right" data-aos-duration="2000">
-              <img class="normal" src="images/youtuber2.png" class="img-fluid" alt="Youtuber box">
-          </a>
-      </div>
+      <div class="col-lg-6">
+        <br><br>
+        <div data-aos="fade-up-right" data-aos-duration="1000"
+          style="font-weight: bold; text-decoration: underline; color: #fff;">
+          Contact me
+        </div>
+
+        <!-- Contact Form (visible and animated) -->
+        <form id="contact-form" style="margin-top: 20px;" 
+              action="https://formsubmit.co/cellohh-hello@yahoo.com" 
+              method="POST" 
+              data-aos="fade-up" 
+              data-aos-duration="1000">
+
+          <input type="hidden" name="_captcha" value="false" />
+          <input type="hidden" name="_next" value="https://marceltorres.com/thank-you.html" />
+
+          <div class="form-group">
+            <label for="name" style="color: #fff;">Name</label>
+            <input type="text" class="form-control" name="name" id="name" required>
+          </div>
+          <div class="form-group">
+            <label for="emailField" style="color: #fff;">Email</label>
+            <input type="email" class="form-control" name="email" id="emailField" required>
+          </div>
+          <div class="form-group">
+            <label for="message" style="color: #fff;">Message</label>
+            <textarea class="form-control" name="message" id="message" rows="5" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Send</button>
+        </form>
       </div>
 
-      <div class="col-md-4">
-        <div class="box bx2" id="video-editor">
-          <a href="https://cellohh.github.io/videoEDITOR/" class="work-link aos-init" target="_blank" data-aos="zoom-out-down" data-aos-duration="2000">
-              <img class="normal" src="images/video2.png" class="img-fluid" alt="Video Editor box">
-          </a>
+      <div class="col-lg-6 text-center">
+        <div class="full-body-container">
+          <img class="img-fluid" src="images/Cello%20Full%20Body.png" alt="Picture of Cello">
+        </div>
+        <img class="img-fluid" id="jack" src="images/jack.png" alt="Jack of all trades text">
       </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="web-developer">
-          <a href="https://cellohh.github.io/developer/" class="work-link aos-init" target="_blank" data-aos="zoom-out-left" data-aos-duration="2000">
-              <img class="normal" src="images/web2.png" class="img-fluid" alt="Web Developer box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="graphic-designer">
-          <a href="https://cello.portfoliobox.net" class="work-link aos-init" target="_blank" data-aos="zoom-out-right" data-aos-duration="2000">
-              <img class="normal" src="images/graphic2.png" class="img-fluid" alt="Graphic Designer box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="esports">
-          <a href="http://www.attackcancel.com" class="work-link aos-init" target="_blank" data-aos="zoom-out-down" data-aos-duration="2000">
-              <img class="normal" src="images/esports2.png" class="img-fluid" alt="eSports box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="live-streamer">
-          <a href="https://www.twitch.tv/cellohh" class="work-link aos-init" target="_blank" data-aos="zoom-out-left" data-aos-duration="2000">
-              <img class="normal" src="images/streamer2.png" class="img-fluid" alt="Live Streamer box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="actor">
-          <a href="https://cellohhh.tumblr.com/" class="work-link aos-init" target="_blank" data-aos="zoom-out-right" data-aos-duration="2000">
-              <img class="normal" src="images/actor2.png" class="img-fluid" alt="Actor box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="game">
-          <a href="https://cellohh.github.io/game-dev/" class="work-link aos-init" target="_blank" data-aos="zoom-out-down" data-aos-duration="2000">
-              <img class="normal" src="images/game2.png" class="img-fluid" alt="Game Developer box">
-          </a>
-      </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="box bx2" id="author">
-          <a href="#" class="work-link aos-init" target="_blank" data-aos="zoom-out-left" data-aos-duration="2000">
-              <img class="normal" src="images/author2.png" class="img-fluid" alt="Author box">
-          </a>
-      </div>
-      </div>
-      <!-- Repeat for each work link -->
     </div>
   </div>
 </section>
 
 
-  <!-- Contact Section -->
-  <section id="contact" style="background-image: url('images/bgcontact.png'); background-size: cover; background-position: center;">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6">
-          <br><br>
-          <span id="email" data-aos="fade-up-right" data-aos-duration="1000">Interested in working with me? Email me at: <br><a href="mailto:cellohh-hello@yahoo.com">cellohh-hello@yahoo.com</a></span>
-        </div>
-     
 
-        <div class="full-body-container">
-          <img class="img-fluid" src="images/Cello%20Full%20Body.png" alt="Picture of Cello">
-          </div>
 
-        <img class="img-fluid" img id="jack" src="images/jack.png" alt="Jack of all trades text">
 
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <p class="pt-2">&copy; 2024 Marcel 'Cello' Torres. All rights reserved.</p>
       </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p class="pt-2">&copy; 2024 Marcel 'Cello' Torres. All rights reserved.</p>
-    </div>
-  </footer>
+    </footer>
 
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script>
-    AOS.init();
-  </script>
-  
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script>
+      AOS.init();
+    </script>
+
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+  </body>
+
 </html>
