--- a/index.html
+++ b/index.html
@@ -145,52 +145,50 @@
 
 
     <!-- Contact Section -->
-<section id="contact"
-  style="background-image: url('images/bgcontact.png'); background-size: cover; background-position: center;">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-6">
-        <br><br>
-        <div data-aos="fade-up-right" data-aos-duration="1000"
-          style="font-weight: bold; text-decoration: underline; color: #fff;">
-          Contact me
-        </div>
+    <section id="contact"
+      style="background-image: url('images/bgcontact.png'); background-size: cover; background-position: center;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <br><br>
+            <div data-aos="fade-up-right" data-aos-duration="1000"
+              style="font-weight: bold; text-decoration: underline; color: #fff;">
+              Contact me
+            </div>
 
-        <!-- Contact Form (visible and animated) -->
-        <form id="contact-form" style="margin-top: 20px;" 
-              action="https://formsubmit.co/396d01081ec5ebc09648cce9b8140ea4" 
-              method="POST" 
-              data-aos="fade-up" 
+            <!-- Contact Form (visible and animated) -->
+            <form id="contact-form" style="margin-top: 20px;"
+              action="https://formsubmit.co/396d01081ec5ebc09648cce9b8140ea4" method="POST" data-aos="fade-up"
               data-aos-duration="1000">
 
-          <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_next" value="https://marceltorres.com/thank-you.html" />
+              <input type="hidden" name="_captcha" value="false" />
+              <input type="hidden" name="_next" value="https://marceltorres.com/thank-you.html" />
 
-          <div class="form-group">
-            <label for="name" style="color: #fff;">Name</label>
-            <input type="text" class="form-control" name="name" id="name" required>
+              <div class="form-group">
+                <label for="name" style="color: #fff;">Name</label>
+                <input type="text" class="form-control" name="name" id="name" required>
+              </div>
+              <div class="form-group">
+                <label for="emailField" style="color: #fff;">Email</label>
+                <input type="email" class="form-control" name="email" id="emailField" required>
+              </div>
+              <div class="form-group">
+                <label for="message" style="color: #fff;">Message</label>
+                <textarea class="form-control" name="message" id="message" rows="5" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Send</button>
+            </form>
           </div>
-          <div class="form-group">
-            <label for="emailField" style="color: #fff;">Email</label>
-            <input type="email" class="form-control" name="email" id="emailField" required>
-          </div>
-          <div class="form-group">
-            <label for="message" style="color: #fff;">Message</label>
-            <textarea class="form-control" name="message" id="message" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Send</button>
-        </form>
-      </div>
 
-      <div class="col-lg-6 text-center">
-        <div class="full-body-container">
-          <img class="img-fluid" src="images/Cello%20Full%20Body.png" alt="Picture of Cello">
+          <div class="col-lg-6 text-center">
+            <div class="full-body-container">
+              <img class="img-fluid" src="images/Cello%20Full%20Body.png" alt="Picture of Cello">
+            </div>
+            <img class="img-fluid" id="jack" src="images/jack.png" alt="Jack of all trades text">
+          </div>
         </div>
-        <img class="img-fluid" id="jack" src="images/jack.png" alt="Jack of all trades text">
       </div>
-    </div>
-  </div>
-</section>
+    </section>
 
 
 
