--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               action="https://formsubmit.co/396d01081ec5ebc09648cce9b8140ea4" method="POST" data-aos="fade-up"
               data-aos-duration="1000">
 
-              <input type="hidden" name="_captcha" value="false" />
+              <input type="hidden" name="_captcha" value="true" />
               <input type="hidden" name="_next" value="https://marceltorres.com/thank-you.html" />
 
               <div class="form-group">
